# TrannsferLearning

./: README.md  capsule.md  my_chat.md  pyproject.toml  resume.txt
capsule/: __init__.py  build.py  cli.py  extract.py  features.py  llm.py  mmr.py  render.py  router.py  schema.py  segment.py  textrank.py
examples/: sample_chat.md
