[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "capsule"
version = "0.1.0"
description = "Transfer learning for LLM chats — turn a dying conversation into a structured handoff."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.34"]
all = ["openai>=1.0", "anthropic>=0.34"]

[project.scripts]
capsule = "capsule.cli:main"

[tool.setuptools.packages.find]
include = ["capsule*"]
